Bootstrapped docker image api
