# api/routes.go
@@ -3,6 +3,7 @@ package api
 import (
 	"github.com/labstack/echo/v4"
 	"github.com/shopwareLabs/testenv-platform/api/handler"
+	"github.com/shopwareLabs/testenv-platform/api/handler/images"
 	_ "github.com/shopwareLabs/testenv-platform/docs"
 	"github.com/shopwareLabs/testenv-platform/services"
 	echoSwagger "github.com/swaggo/echo-swagger"
@@ -25,6 +26,7 @@ func RegisterRoutes(e *echo.Echo) {
 
 	// Init handlers
 	sandboxHandler := handler.NewSandboxHandler(dockerService)
+	imageHandler := images.NewImageHandler(dockerService)
 
 	// Add api handlers
 	api := e.Group("/api")
@@ -35,4 +37,9 @@ func RegisterRoutes(e *echo.Echo) {
 	api.GET("/sandboxes", sandboxHandler.ListSandboxesHandler)
 	api.POST("/sandboxes", sandboxHandler.CreateSandboxHandler)
 	api.DELETE("/sandboxes/:id", sandboxHandler.DeleteSandboxHandler)
+
+	api.GET("/images", imageHandler.ImageListHandler)
+	api.GET("/images/:id", imageHandler.ImageDetailsHandler)
+	api.POST("/images", imageHandler.PullImageHandler)
+	api.DELETE("/images/:id", imageHandler.ImageDeleteHandler)
 }
